--- a/Handwriting_annModel.ipynb
+++ b/Handwriting_annModel.ipynb
@@ -17,7 +17,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -896,7 +896,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "nb_classes = 46\n",
     "\n",
     "X_train = X_train.astype('float32')\n",
@@ -980,7 +979,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adadelta',metrics=[\"accuracy\"])"
    ]
   },
@@ -1058,10 +1056,11 @@
     }
    ],
    "source": [
+    "callback = keras.callbacks.TensorBoard(log_dir='./logs', histogram_freq=0, batch_size=32, write_graph=True, write_grads=False, write_images=False, embeddings_freq=0, embeddings_layer_names=None, embeddings_metadata=None, embeddings_data=None)\n",
     "fit_model = model.fit(X_train, Y_train,\n",
     "          batch_size=100, epochs=30,\n",
     "          verbose=2,\n",
-    "          validation_data=(X_vald, Y_vald))"
+    "          validation_data=(X_vald, Y_vald),callbacks=callback)"
    ]
   },
   {
@@ -1119,7 +1118,7 @@
     "model_name = 'model_all.h5'\n",
     "model_path = os.path.join(save_dir, model_name)\n",
     "model.save(model_path)\n",
-    "print('Saved trained model at %s ' % model_path)\n"
+    "print('Saved trained model at %s ' % model_path)"
    ]
   },
   {
@@ -1200,7 +1199,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1213,7 +1214,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1224,5 +1225,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
